2010-06-26  Jan Hubicka  <jh@suse.cz>

	* ipa-split.c (consider_split): PHI in entry block is OK as long as all
	edges comming from header are equivalent.
	(visit_bb): Handle PHIs correctly.
	* tree-inline.c (copy_phis_for_bb): Be able to copy
	PHI from entry edge.
	(copy_cfg_body): Produce edge from entry BB before copying
	PHIs.

2010-06-26  Richard Guenther  <rguenther@suse.de>

	PR middle-end/44674
	* tree-ssa-alias.c (refs_may_alias_p_1): Allow all kind of
	decls.  Handle LABEL_DECLs like FUNCTION_DECLs.

2010-06-26  Joseph Myers  <joseph@codesourcery.com>

	* gcc.c (n_switches_alloc, n_infiles_alloc, alloc_infile,
	add_infile, alloc_switch): New.
	(process_command): Remove variable lang_n_infiles.  Process
	options in a single pass.  Use new functions for allocating
	infiles and switches arrays.  Properly skip operands of
	-Xpreprocessor and -Xassembler.

2010-06-26  Jan Hubicka  <jh@suse.cz>

	PR middle-end/44671
	* cgraphunit.c (cgraph_function_versioning): Remove wrong
	cgraph_make_decl_local call; fix typo copying RTL data.

2010-06-25  DJ Delorie  <dj@redhat.com>

	* config/m32c/m32c-protos.h (m32c_note_pragma_address): Declare.
	(m32c_output_aligned_common): Likewise.
	* config/m32c/m32c.h (ASM_OUTPUT_ALIGNED_DECL_COMMON): New.
	(ASM_OUTPUT_ALIGNED_DECL_LOCAL): New.
	* config/m32c/m32c-pragma.c (m32c_pragma_address): New.
	(m32c_register_pragmas): Register it.
	* config/m32c/m32c.c (m32c_get_pragma_address): New.
	(m32c_insert_attributes): Set #pragma address decls volatile.
	(pragma_entry_eq): New.
	(pragma_entry_hash): New.
	(m32c_note_pragma_address): New.
	(m32c_get_pragma_address): New.
	(m32c_output_aligned_common): New.
	* doc/extend.texi: Document the new pragma.

	* config/m32c/m32c.c (m32c_illegal_subreg_p): Reject illegal MEMs
	also.
	* config/m32c/predicates.md (m32c_any_operand): Check the code
	instead of memory_operand so as to allow matching volatile MEMs.
	(m32c_nonimmediate_operand): Likewise.
	(mra_operand): Allow volatiles.
